// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeResults can merge 2 responses 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge main dependency with depdeps 1`] = `
Object {
  "contents": Object {
    "/node_modules/conflict1/1.2.6/lib/dap.js": "yes",
    "/node_modules/conflict1/1.2.6/lib/index.js": "yes yes d",
    "/node_modules/conflict1/lib/doep.js": "yes",
    "/node_modules/conflict1/lib/index.js": "yes yes c",
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "3.2.5",
    },
    Object {
      "name": "conflict2",
      "version": "3.0.2",
    },
    Object {
      "name": "conflict3",
      "version": "3.0.2",
    },
  ],
  "dependencyAliases": Object {
    "conflict3": Object {
      "conflict1": "conflict1/1.2.6",
    },
  },
  "dependencyDependencies": Object {
    "conflict1": Object {
      "entries": Array [
        "conflict1",
      ],
      "parents": Array [
        "conflict2",
      ],
      "resolved": "3.2.5",
      "semver": "1.2.6 - 3",
    },
    "conflict1/1.2.6": Object {
      "entries": Array [
        "conflict1",
      ],
      "parents": Array [
        "conflict3",
      ],
      "resolved": "1.2.6",
      "semver": "~1.2.6",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "13.0.1",
      "semver": "^13.0.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with absolute+semver conflicts, but same entries 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with conflicts recursively 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/11.0.2/lib/index.js": "yes yes 11.0.2",
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict2",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "conflict2": Object {
      "fbjs": "fbjs/11.0.2",
    },
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict1",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/11.0.2": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict2",
      ],
      "resolved": "11.0.2",
      "semver": "^11.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with full semver conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes 11",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "11.0.1",
      "semver": "^11.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with multiple conflicts 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "16.0.0",
    },
    Object {
      "name": "conflict2",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict1",
        "conflict2",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge responses with range semvers 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict1",
      "version": "3.0.1",
    },
    Object {
      "name": "conflict2",
      "version": "3.0.2",
    },
  ],
  "dependencyAliases": Object {},
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict1",
        "conflict2",
      ],
      "resolved": "3.2.6",
      "semver": "1.2.6 - 3",
    },
  },
}
`;

exports[`mergeResults can merge responses with semver/absolute conflicts, but different entries 1`] = `
Object {
  "contents": Object {
    "/node_modules/fbjs/12.0.0/lib/index.js": "yes yes",
    "/node_modules/fbjs/lib/index.js": "yes yes c",
    "/node_modules/react-dom/lib/react-dom.development.js": "yes yes",
    "/node_modules/react/lib/react.development.js": "yes",
  },
  "dependencies": Array [
    Object {
      "name": "conflict",
      "version": "16.0.0",
    },
    Object {
      "name": "react",
      "version": "16.0.0",
    },
    Object {
      "name": "react-dom",
      "version": "16.0.0",
    },
  ],
  "dependencyAliases": Object {
    "react": Object {
      "fbjs": "fbjs/12.0.0",
    },
    "react-dom": Object {
      "fbjs": "fbjs/12.0.0",
    },
  },
  "dependencyDependencies": Object {
    "fbjs": Object {
      "entries": Array [
        "fbjs",
        "fbjs/lib/test.js",
      ],
      "parents": Array [
        "conflict",
      ],
      "resolved": "12.0.1",
      "semver": "^12.2.0",
    },
    "fbjs/12.0.0": Object {
      "entries": Array [
        "fbjs",
      ],
      "parents": Array [
        "react",
        "react-dom",
      ],
      "resolved": "12.0.0",
      "semver": "^12.0.0",
    },
  },
}
`;

exports[`mergeResults can merge web3 1`] = `
Object {
  "contents": Object {
    "/node_modules/web3-provider-engine/13.8.0/package.json": Object {
      "contents": "{}",
    },
    "/node_modules/web3/package.json": Object {
      "contents": "{}",
    },
  },
  "dependencies": Array [
    Object {
      "name": "web3",
      "version": "0.20.6",
    },
    Object {
      "name": "web3-provider-engine",
      "version": "14.0.5",
    },
  ],
  "dependencyAliases": Object {
    "eth-tx-summary": Object {
      "web3-provider-engine": "web3-provider-engine/13.8.0",
    },
  },
  "dependencyDependencies": Object {
    "abstract-leveldown": Object {
      "entries": Array [
        "abstract-leveldown",
      ],
      "parents": Array [
        "deferred-leveldown",
        "memdown",
      ],
      "resolved": "2.6.3",
      "semver": "~2.6.0",
    },
    "ajv": Object {
      "entries": Array [],
      "parents": Array [
        "har-validator",
      ],
      "resolved": "5.5.2",
      "semver": "^5.1.0",
    },
    "ansi-regex": Object {
      "entries": Array [],
      "parents": Array [
        "has-ansi",
        "strip-ansi",
      ],
      "resolved": "2.1.1",
      "semver": "^2.0.0",
    },
    "ansi-styles": Object {
      "entries": Array [],
      "parents": Array [
        "chalk",
      ],
      "resolved": "2.2.1",
      "semver": "^2.2.1",
    },
    "asn1": Object {
      "entries": Array [],
      "parents": Array [
        "sshpk",
      ],
      "resolved": "0.2.3",
      "semver": "~0.2.3",
    },
    "assert-plus": Object {
      "entries": Array [],
      "parents": Array [
        "http-signature",
        "jsprim",
        "verror",
        "sshpk",
        "dashdash",
        "getpass",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "async": Object {
      "entries": Array [
        "async",
        "async/asyncify",
        "async/doWhilst",
        "async/eachSeries",
        "async/map",
        "async/parallel",
        "async/retry",
        "async/waterfall",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
        "json-rpc-engine",
        "eth-json-rpc-middleware",
        "eth-tx-summary",
        "ethereumjs-block",
        "merkle-patricia-tree",
        "ethereumjs-vm",
        "async-eventemitter",
      ],
      "resolved": "2.6.0",
      "semver": "^2.5.0",
    },
    "async-eventemitter": Object {
      "entries": Array [
        "async-eventemitter",
      ],
      "parents": Array [
        "ethereumjs-vm",
      ],
      "resolved": "0.2.4",
      "semver": "^0.2.2",
    },
    "async-limiter": Object {
      "entries": Array [],
      "parents": Array [
        "ws",
      ],
      "resolved": "1.0.0",
      "semver": "~1.0.0",
    },
    "asynckit": Object {
      "entries": Array [],
      "parents": Array [
        "form-data",
      ],
      "resolved": "0.4.0",
      "semver": "^0.4.0",
    },
    "aws-sign2": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.7.0",
      "semver": "~0.7.0",
    },
    "aws4": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "1.7.0",
      "semver": "^1.6.0",
    },
    "babel-code-frame": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.26.0",
    },
    "babel-core": Object {
      "entries": Array [],
      "parents": Array [
        "babelify",
        "babel-register",
      ],
      "resolved": "6.26.3",
      "semver": "^6.0.14",
    },
    "babel-generator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "6.26.1",
      "semver": "^6.26.0",
    },
    "babel-helper-builder-binary-assignment-operator-visitor": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-exponentiation-operator",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-call-delegate": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-parameters",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-define-map": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-classes",
      ],
      "resolved": "6.26.0",
      "semver": "^6.24.1",
    },
    "babel-helper-explode-assignable-expression": Object {
      "entries": Array [],
      "parents": Array [
        "babel-helper-builder-binary-assignment-operator-visitor",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-function-name": Object {
      "entries": Array [],
      "parents": Array [
        "babel-helper-remap-async-to-generator",
        "babel-plugin-transform-es2015-classes",
        "babel-helper-define-map",
        "babel-plugin-transform-es2015-function-name",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-get-function-arity": Object {
      "entries": Array [],
      "parents": Array [
        "babel-helper-function-name",
        "babel-plugin-transform-es2015-parameters",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-hoist-variables": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-modules-systemjs",
        "babel-helper-call-delegate",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-optimise-call-expression": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-classes",
        "babel-helper-replace-supers",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-regex": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-sticky-regex",
        "babel-plugin-transform-es2015-unicode-regex",
      ],
      "resolved": "6.26.0",
      "semver": "^6.24.1",
    },
    "babel-helper-remap-async-to-generator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-async-to-generator",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helper-replace-supers": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-classes",
        "babel-plugin-transform-es2015-object-super",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-helpers": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-messages": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-helper-replace-supers",
        "babel-plugin-transform-es2015-classes",
        "babel-generator",
        "babel-core",
      ],
      "resolved": "6.23.0",
      "semver": "^6.23.0",
    },
    "babel-plugin-check-es2015-constants": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-syntax-async-functions": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-async-to-generator",
      ],
      "resolved": "6.13.0",
      "semver": "^6.8.0",
    },
    "babel-plugin-syntax-exponentiation-operator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-exponentiation-operator",
      ],
      "resolved": "6.13.0",
      "semver": "^6.8.0",
    },
    "babel-plugin-syntax-trailing-function-commas": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-async-to-generator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-arrow-functions": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-block-scoped-functions": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-block-scoping": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.26.0",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-classes": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-computed-properties": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-destructuring": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.23.0",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-duplicate-keys": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-for-of": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.23.0",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-function-name": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-literals": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-modules-amd": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
        "babel-plugin-transform-es2015-modules-umd",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-modules-commonjs": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-modules-amd",
        "babel-preset-env",
      ],
      "resolved": "6.26.2",
      "semver": "^6.24.1",
    },
    "babel-plugin-transform-es2015-modules-systemjs": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-modules-umd": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-object-super": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-parameters": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-shorthand-properties": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-spread": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-sticky-regex": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-template-literals": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.22.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-es2015-typeof-symbol": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.23.0",
      "semver": "^6.23.0",
    },
    "babel-plugin-transform-es2015-unicode-regex": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-exponentiation-operator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.24.1",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-regenerator": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "6.26.0",
      "semver": "^6.22.0",
    },
    "babel-plugin-transform-strict-mode": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-modules-commonjs",
      ],
      "resolved": "6.24.1",
      "semver": "^6.24.1",
    },
    "babel-preset-env": Object {
      "entries": Array [],
      "parents": Array [
        "json-rpc-engine",
      ],
      "resolved": "1.7.0",
      "semver": "^1.3.2",
    },
    "babel-register": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.26.0",
    },
    "babel-runtime": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-check-es2015-constants",
        "babel-helper-remap-async-to-generator",
        "babel-template",
        "babel-messages",
        "babel-traverse",
        "babel-types",
        "babel-helper-function-name",
        "babel-helper-get-function-arity",
        "babel-plugin-transform-async-to-generator",
        "babel-plugin-transform-es2015-arrow-functions",
        "babel-plugin-transform-es2015-block-scoped-functions",
        "babel-plugin-transform-es2015-block-scoping",
        "babel-helper-optimise-call-expression",
        "babel-helper-replace-supers",
        "babel-helper-define-map",
        "babel-plugin-transform-es2015-classes",
        "babel-plugin-transform-es2015-computed-properties",
        "babel-plugin-transform-es2015-destructuring",
        "babel-plugin-transform-es2015-duplicate-keys",
        "babel-plugin-transform-es2015-for-of",
        "babel-plugin-transform-es2015-function-name",
        "babel-plugin-transform-es2015-literals",
        "babel-plugin-transform-strict-mode",
        "babel-plugin-transform-es2015-modules-commonjs",
        "babel-plugin-transform-es2015-modules-amd",
        "babel-helper-hoist-variables",
        "babel-plugin-transform-es2015-modules-systemjs",
        "babel-plugin-transform-es2015-modules-umd",
        "babel-plugin-transform-es2015-object-super",
        "babel-helper-call-delegate",
        "babel-plugin-transform-es2015-parameters",
        "babel-plugin-transform-es2015-shorthand-properties",
        "babel-plugin-transform-es2015-spread",
        "babel-helper-regex",
        "babel-plugin-transform-es2015-sticky-regex",
        "babel-plugin-transform-es2015-template-literals",
        "babel-plugin-transform-es2015-typeof-symbol",
        "babel-plugin-transform-es2015-unicode-regex",
        "babel-helper-explode-assignable-expression",
        "babel-helper-builder-binary-assignment-operator-visitor",
        "babel-plugin-transform-exponentiation-operator",
        "regenerator-transform",
        "babel-generator",
        "babel-helpers",
        "babel-register",
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.22.0",
    },
    "babel-template": Object {
      "entries": Array [],
      "parents": Array [
        "babel-helper-remap-async-to-generator",
        "babel-helper-function-name",
        "babel-plugin-transform-es2015-block-scoping",
        "babel-helper-replace-supers",
        "babel-plugin-transform-es2015-classes",
        "babel-plugin-transform-es2015-computed-properties",
        "babel-plugin-transform-es2015-modules-commonjs",
        "babel-plugin-transform-es2015-modules-amd",
        "babel-plugin-transform-es2015-modules-systemjs",
        "babel-plugin-transform-es2015-modules-umd",
        "babel-plugin-transform-es2015-parameters",
        "babel-helpers",
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.24.1",
    },
    "babel-traverse": Object {
      "entries": Array [],
      "parents": Array [
        "babel-template",
        "babel-helper-remap-async-to-generator",
        "babel-helper-function-name",
        "babel-plugin-transform-es2015-block-scoping",
        "babel-helper-replace-supers",
        "babel-plugin-transform-es2015-classes",
        "babel-plugin-transform-es2015-parameters",
        "babel-helper-call-delegate",
        "babel-helper-explode-assignable-expression",
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.26.0",
    },
    "babel-types": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-template",
        "babel-helper-remap-async-to-generator",
        "babel-helper-function-name",
        "babel-helper-get-function-arity",
        "babel-plugin-transform-es2015-block-scoping",
        "babel-helper-optimise-call-expression",
        "babel-helper-replace-supers",
        "babel-helper-define-map",
        "babel-plugin-transform-es2015-classes",
        "babel-plugin-transform-es2015-duplicate-keys",
        "babel-plugin-transform-es2015-function-name",
        "babel-plugin-transform-strict-mode",
        "babel-plugin-transform-es2015-modules-commonjs",
        "babel-helper-hoist-variables",
        "babel-helper-call-delegate",
        "babel-plugin-transform-es2015-parameters",
        "babel-plugin-transform-es2015-shorthand-properties",
        "babel-helper-regex",
        "babel-plugin-transform-es2015-sticky-regex",
        "babel-helper-explode-assignable-expression",
        "babel-helper-builder-binary-assignment-operator-visitor",
        "regenerator-transform",
        "babel-generator",
        "babel-core",
      ],
      "resolved": "6.26.0",
      "semver": "^6.26.0",
    },
    "babelify": Object {
      "entries": Array [],
      "parents": Array [
        "json-rpc-engine",
      ],
      "resolved": "7.3.0",
      "semver": "^7.3.0",
    },
    "babylon": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-template",
        "babel-core",
      ],
      "resolved": "6.18.0",
      "semver": "^6.18.0",
    },
    "backoff": Object {
      "entries": Array [
        "backoff",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "2.5.0",
      "semver": "^2.5.0",
    },
    "balanced-match": Object {
      "entries": Array [],
      "parents": Array [
        "brace-expansion",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "bignumber.js": Object {
      "entries": Array [
        "bignumber.js",
      ],
      "parents": Array [
        "web3",
      ],
      "resolved": "2.0.7",
      "semver": "git+https://github.com/frozeman/bignumber.js-nolookahead.git",
    },
    "bindings": Object {
      "entries": Array [],
      "parents": Array [
        "keccak",
        "secp256k1",
      ],
      "resolved": "1.3.0",
      "semver": "^1.2.1",
    },
    "bip66": Object {
      "entries": Array [
        "bip66",
      ],
      "parents": Array [
        "secp256k1",
      ],
      "resolved": "1.1.5",
      "semver": "^1.1.3",
    },
    "bn.js": Object {
      "entries": Array [
        "bn.js",
      ],
      "parents": Array [
        "ethereumjs-util",
        "secp256k1",
        "elliptic",
        "ethereumjs-abi",
        "eth-tx-summary",
      ],
      "resolved": "4.11.8",
      "semver": "^4.11.0",
    },
    "boom": Object {
      "entries": Array [],
      "parents": Array [
        "hawk",
        "cryptiles",
      ],
      "resolved": "4.3.1",
      "semver": "4.x.x",
    },
    "brace-expansion": Object {
      "entries": Array [],
      "parents": Array [
        "minimatch",
      ],
      "resolved": "1.1.11",
      "semver": "^1.1.7",
    },
    "brorand": Object {
      "entries": Array [
        "brorand",
      ],
      "parents": Array [
        "elliptic",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.1",
    },
    "browserify-aes": Object {
      "entries": Array [],
      "parents": Array [
        "drbg.js",
      ],
      "resolved": "1.2.0",
      "semver": "^1.0.6",
    },
    "browserslist": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
      ],
      "resolved": "3.2.7",
      "semver": "^3.2.6",
    },
    "buffer-from": Object {
      "entries": Array [],
      "parents": Array [
        "concat-stream",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "buffer-xor": Object {
      "entries": Array [],
      "parents": Array [
        "browserify-aes",
      ],
      "resolved": "1.0.3",
      "semver": "^1.0.3",
    },
    "builtin-modules": Object {
      "entries": Array [],
      "parents": Array [
        "is-builtin-module",
      ],
      "resolved": "1.1.1",
      "semver": "^1.0.0",
    },
    "camelcase": Object {
      "entries": Array [],
      "parents": Array [
        "yargs-parser",
      ],
      "resolved": "3.0.0",
      "semver": "^3.0.0",
    },
    "caniuse-lite": Object {
      "entries": Array [],
      "parents": Array [
        "browserslist",
      ],
      "resolved": "1.0.30000841",
      "semver": "^1.0.30000835",
    },
    "caseless": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.12.0",
      "semver": "~0.12.0",
    },
    "chalk": Object {
      "entries": Array [],
      "parents": Array [
        "babel-code-frame",
      ],
      "resolved": "1.1.3",
      "semver": "^1.1.3",
    },
    "checkpoint-store": Object {
      "entries": Array [
        "checkpoint-store",
      ],
      "parents": Array [
        "fake-merkle-patricia-tree",
      ],
      "resolved": "1.1.0",
      "semver": "^1.1.0",
    },
    "cipher-base": Object {
      "entries": Array [
        "cipher-base",
      ],
      "parents": Array [
        "create-hash",
        "browserify-aes",
        "create-hmac",
      ],
      "resolved": "1.0.4",
      "semver": "^1.0.1",
    },
    "cliui": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "3.2.0",
      "semver": "^3.2.0",
    },
    "clone": Object {
      "entries": Array [
        "clone",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
        "json-rpc-engine",
        "eth-tx-summary",
      ],
      "resolved": "2.1.1",
      "semver": "^2.0.0",
    },
    "co": Object {
      "entries": Array [],
      "parents": Array [
        "ajv",
      ],
      "resolved": "4.6.0",
      "semver": "^4.6.0",
    },
    "code-point-at": Object {
      "entries": Array [],
      "parents": Array [
        "string-width",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.0",
    },
    "combined-stream": Object {
      "entries": Array [],
      "parents": Array [
        "request",
        "form-data",
      ],
      "resolved": "1.0.6",
      "semver": "~1.0.5",
    },
    "concat-map": Object {
      "entries": Array [],
      "parents": Array [
        "brace-expansion",
      ],
      "resolved": "0.0.1",
      "semver": "0.0.1",
    },
    "concat-stream": Object {
      "entries": Array [],
      "parents": Array [
        "eth-tx-summary",
      ],
      "resolved": "1.6.2",
      "semver": "^1.5.1",
    },
    "convert-source-map": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "1.5.1",
      "semver": "^1.5.1",
    },
    "core-js": Object {
      "entries": Array [],
      "parents": Array [
        "babel-runtime",
        "babel-register",
      ],
      "resolved": "2.5.6",
      "semver": "^2.4.0",
    },
    "core-util-is": Object {
      "entries": Array [
        "core-util-is",
      ],
      "parents": Array [
        "readable-stream",
        "verror",
      ],
      "resolved": "1.0.2",
      "semver": "~1.0.0",
    },
    "create-hash": Object {
      "entries": Array [
        "create-hash",
      ],
      "parents": Array [
        "ethereumjs-util",
        "secp256k1",
        "browserify-aes",
        "drbg.js",
        "create-hmac",
      ],
      "resolved": "1.2.0",
      "semver": "^1.1.2",
    },
    "create-hmac": Object {
      "entries": Array [],
      "parents": Array [
        "drbg.js",
      ],
      "resolved": "1.1.7",
      "semver": "^1.1.4",
    },
    "cross-fetch": Object {
      "entries": Array [
        "cross-fetch",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-infura",
      ],
      "resolved": "2.2.0",
      "semver": "^2.1.0",
    },
    "cryptiles": Object {
      "entries": Array [],
      "parents": Array [
        "hawk",
      ],
      "resolved": "3.1.2",
      "semver": "3.x.x",
    },
    "crypto-js": Object {
      "entries": Array [
        "crypto-js",
        "crypto-js/sha3",
      ],
      "parents": Array [
        "web3",
      ],
      "resolved": "3.1.8",
      "semver": "^3.1.4",
    },
    "dashdash": Object {
      "entries": Array [],
      "parents": Array [
        "sshpk",
      ],
      "resolved": "1.14.1",
      "semver": "^1.12.0",
    },
    "debug": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-core",
      ],
      "resolved": "2.6.9",
      "semver": "^2.6.8",
    },
    "decamelize": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.2.0",
      "semver": "^1.1.1",
    },
    "deep-equal": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "1.0.1",
      "semver": "~1.0.1",
    },
    "deferred-leveldown": Object {
      "entries": Array [
        "deferred-leveldown",
      ],
      "parents": Array [
        "levelup",
      ],
      "resolved": "1.2.2",
      "semver": "~1.2.1",
    },
    "define-properties": Object {
      "entries": Array [],
      "parents": Array [
        "string.prototype.trim",
      ],
      "resolved": "1.1.2",
      "semver": "^1.1.2",
    },
    "defined": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "1.0.0",
      "semver": "~1.0.0",
    },
    "delayed-stream": Object {
      "entries": Array [],
      "parents": Array [
        "combined-stream",
      ],
      "resolved": "1.0.0",
      "semver": "~1.0.0",
    },
    "detect-indent": Object {
      "entries": Array [],
      "parents": Array [
        "babel-generator",
      ],
      "resolved": "4.0.0",
      "semver": "^4.0.0",
    },
    "dom-walk": Object {
      "entries": Array [],
      "parents": Array [
        "min-document",
      ],
      "resolved": "0.1.1",
      "semver": "^0.1.0",
    },
    "drbg.js": Object {
      "entries": Array [],
      "parents": Array [
        "secp256k1",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "electron-to-chromium": Object {
      "entries": Array [],
      "parents": Array [
        "browserslist",
      ],
      "resolved": "1.3.47",
      "semver": "^1.3.45",
    },
    "elliptic": Object {
      "entries": Array [
        "elliptic",
      ],
      "parents": Array [
        "secp256k1",
      ],
      "resolved": "6.4.0",
      "semver": "^6.2.3",
    },
    "end-of-stream": Object {
      "entries": Array [],
      "parents": Array [
        "eth-tx-summary",
      ],
      "resolved": "1.4.1",
      "semver": "^1.1.0",
    },
    "errno": Object {
      "entries": Array [
        "errno",
      ],
      "parents": Array [
        "level-errors",
      ],
      "resolved": "0.1.7",
      "semver": "~0.1.1",
    },
    "error-ex": Object {
      "entries": Array [],
      "parents": Array [
        "parse-json",
      ],
      "resolved": "1.3.1",
      "semver": "^1.2.0",
    },
    "es-abstract": Object {
      "entries": Array [],
      "parents": Array [
        "string.prototype.trim",
      ],
      "resolved": "1.11.0",
      "semver": "^1.5.0",
    },
    "es-to-primitive": Object {
      "entries": Array [],
      "parents": Array [
        "es-abstract",
      ],
      "resolved": "1.1.1",
      "semver": "^1.1.1",
    },
    "escape-string-regexp": Object {
      "entries": Array [],
      "parents": Array [
        "chalk",
      ],
      "resolved": "1.0.5",
      "semver": "^1.0.2",
    },
    "esutils": Object {
      "entries": Array [],
      "parents": Array [
        "babel-code-frame",
        "babel-types",
      ],
      "resolved": "2.0.2",
      "semver": "^2.0.2",
    },
    "eth-block-tracker": Object {
      "entries": Array [
        "eth-block-tracker",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "3.0.1",
      "semver": "^3.0.0",
    },
    "eth-json-rpc-infura": Object {
      "entries": Array [
        "eth-json-rpc-infura/src/createProvider",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "3.1.2",
      "semver": "^3.1.0",
    },
    "eth-json-rpc-middleware": Object {
      "entries": Array [
        "eth-json-rpc-middleware/providerFromEngine",
      ],
      "parents": Array [
        "eth-json-rpc-infura",
      ],
      "resolved": "1.7.0",
      "semver": "^1.5.0",
    },
    "eth-query": Object {
      "entries": Array [
        "eth-query",
      ],
      "parents": Array [
        "eth-block-tracker",
        "eth-json-rpc-middleware",
        "eth-tx-summary",
      ],
      "resolved": "2.1.2",
      "semver": "^2.1.0",
    },
    "eth-sig-util": Object {
      "entries": Array [
        "eth-sig-util",
      ],
      "parents": Array [
        "eth-json-rpc-middleware",
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "1.4.2",
      "semver": "^1.4.2",
    },
    "eth-tx-summary": Object {
      "entries": Array [],
      "parents": Array [
        "eth-json-rpc-middleware",
      ],
      "resolved": "3.2.1",
      "semver": "^3.1.2",
    },
    "ethereum-common": Object {
      "entries": Array [
        "ethereum-common",
        "ethereum-common/params.json",
      ],
      "parents": Array [
        "ethereumjs-tx",
        "ethereumjs-block",
        "ethereumjs-vm",
      ],
      "resolved": "0.0.18",
      "semver": "^0.0.18",
    },
    "ethereumjs-abi": Object {
      "entries": Array [
        "ethereumjs-abi",
      ],
      "parents": Array [
        "eth-sig-util",
      ],
      "resolved": "0.6.5",
      "semver": "git+https://github.com/ethereumjs/ethereumjs-abi.git",
    },
    "ethereumjs-account": Object {
      "entries": Array [
        "ethereumjs-account",
      ],
      "parents": Array [
        "ethereumjs-vm",
      ],
      "resolved": "2.0.5",
      "semver": "^2.0.3",
    },
    "ethereumjs-block": Object {
      "entries": Array [
        "ethereumjs-block",
      ],
      "parents": Array [
        "eth-tx-summary",
        "ethereumjs-vm",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "1.7.1",
      "semver": "^1.4.1",
    },
    "ethereumjs-tx": Object {
      "entries": Array [
        "ethereumjs-tx",
        "ethereumjs-tx/fake.js",
      ],
      "parents": Array [
        "eth-block-tracker",
        "ethereumjs-block",
        "eth-tx-summary",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "1.3.4",
      "semver": "^1.3.3",
    },
    "ethereumjs-util": Object {
      "entries": Array [
        "ethereumjs-util",
      ],
      "parents": Array [
        "ethereumjs-tx",
        "eth-block-tracker",
        "ethereumjs-abi",
        "eth-sig-util",
        "ethereumjs-block",
        "merkle-patricia-tree",
        "eth-tx-summary",
        "ethereumjs-account",
        "ethereumjs-vm",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "5.2.0",
      "semver": "^5.0.0",
    },
    "ethereumjs-vm": Object {
      "entries": Array [
        "ethereumjs-vm/dist/hooked",
      ],
      "parents": Array [
        "eth-tx-summary",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "2.3.5",
      "semver": "^2.3.4",
    },
    "ethjs-util": Object {
      "entries": Array [
        "ethjs-util",
      ],
      "parents": Array [
        "ethereumjs-util",
        "eth-block-tracker",
      ],
      "resolved": "0.1.4",
      "semver": "^0.1.3",
    },
    "evp_bytestokey": Object {
      "entries": Array [],
      "parents": Array [
        "browserify-aes",
      ],
      "resolved": "1.0.3",
      "semver": "^1.0.3",
    },
    "extend": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "3.0.1",
      "semver": "~3.0.1",
    },
    "extsprintf": Object {
      "entries": Array [],
      "parents": Array [
        "jsprim",
        "verror",
      ],
      "resolved": "1.3.0",
      "semver": "1.3.0",
    },
    "fake-merkle-patricia-tree": Object {
      "entries": Array [
        "fake-merkle-patricia-tree",
      ],
      "parents": Array [
        "ethereumjs-vm",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "fast-deep-equal": Object {
      "entries": Array [],
      "parents": Array [
        "ajv",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.0",
    },
    "fast-json-stable-stringify": Object {
      "entries": Array [],
      "parents": Array [
        "ajv",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "fetch-ponyfill": Object {
      "entries": Array [],
      "parents": Array [
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "4.1.0",
      "semver": "^4.0.0",
    },
    "find-up": Object {
      "entries": Array [],
      "parents": Array [
        "read-pkg-up",
      ],
      "resolved": "1.1.2",
      "semver": "^1.0.0",
    },
    "for-each": Object {
      "entries": Array [
        "for-each",
      ],
      "parents": Array [
        "tape",
        "parse-headers",
      ],
      "resolved": "0.3.2",
      "semver": "~0.3.2",
    },
    "foreach": Object {
      "entries": Array [],
      "parents": Array [
        "define-properties",
      ],
      "resolved": "2.0.5",
      "semver": "^2.0.5",
    },
    "forever-agent": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.6.1",
      "semver": "~0.6.1",
    },
    "form-data": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "2.3.2",
      "semver": "~2.3.1",
    },
    "fs-extra": Object {
      "entries": Array [],
      "parents": Array [
        "solc",
      ],
      "resolved": "0.30.0",
      "semver": "^0.30.0",
    },
    "fs.realpath": Object {
      "entries": Array [],
      "parents": Array [
        "glob",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "function-bind": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
        "has",
        "es-abstract",
        "string.prototype.trim",
      ],
      "resolved": "1.1.1",
      "semver": "~1.1.1",
    },
    "functional-red-black-tree": Object {
      "entries": Array [
        "functional-red-black-tree",
      ],
      "parents": Array [
        "memdown",
        "checkpoint-store",
        "ethereumjs-vm",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "get-caller-file": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.0.2",
      "semver": "^1.0.1",
    },
    "getpass": Object {
      "entries": Array [],
      "parents": Array [
        "sshpk",
      ],
      "resolved": "0.1.7",
      "semver": "^0.1.1",
    },
    "glob": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
        "rimraf",
      ],
      "resolved": "7.1.2",
      "semver": "~7.1.2",
    },
    "global": Object {
      "entries": Array [
        "global/window",
      ],
      "parents": Array [
        "xhr",
      ],
      "resolved": "4.3.2",
      "semver": "~4.3.0",
    },
    "globals": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
      ],
      "resolved": "9.18.0",
      "semver": "^9.18.0",
    },
    "graceful-fs": Object {
      "entries": Array [],
      "parents": Array [
        "fs-extra",
        "load-json-file",
        "path-type",
      ],
      "resolved": "4.1.11",
      "semver": "^4.1.2",
    },
    "har-schema": Object {
      "entries": Array [],
      "parents": Array [
        "har-validator",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "har-validator": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "5.0.3",
      "semver": "~5.0.3",
    },
    "has": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
        "es-abstract",
        "is-regex",
      ],
      "resolved": "1.0.1",
      "semver": "~1.0.1",
    },
    "has-ansi": Object {
      "entries": Array [],
      "parents": Array [
        "chalk",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "hash-base": Object {
      "entries": Array [
        "hash-base",
      ],
      "parents": Array [
        "md5.js",
        "ripemd160",
      ],
      "resolved": "3.0.4",
      "semver": "^3.0.0",
    },
    "hash.js": Object {
      "entries": Array [
        "hash.js",
      ],
      "parents": Array [
        "elliptic",
        "hmac-drbg",
      ],
      "resolved": "1.1.3",
      "semver": "^1.0.0",
    },
    "hawk": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "6.0.2",
      "semver": "~6.0.2",
    },
    "hmac-drbg": Object {
      "entries": Array [
        "hmac-drbg",
      ],
      "parents": Array [
        "elliptic",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.0",
    },
    "hoek": Object {
      "entries": Array [],
      "parents": Array [
        "hawk",
        "boom",
        "sntp",
      ],
      "resolved": "4.2.1",
      "semver": "4.x.x",
    },
    "home-or-tmp": Object {
      "entries": Array [],
      "parents": Array [
        "babel-register",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "hosted-git-info": Object {
      "entries": Array [],
      "parents": Array [
        "normalize-package-data",
      ],
      "resolved": "2.6.0",
      "semver": "^2.1.4",
    },
    "http-signature": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "1.2.0",
      "semver": "~1.2.0",
    },
    "immediate": Object {
      "entries": Array [
        "immediate",
      ],
      "parents": Array [
        "memdown",
      ],
      "resolved": "3.2.3",
      "semver": "^3.2.3",
    },
    "inflight": Object {
      "entries": Array [],
      "parents": Array [
        "glob",
      ],
      "resolved": "1.0.6",
      "semver": "^1.0.4",
    },
    "inherits": Object {
      "entries": Array [
        "inherits",
      ],
      "parents": Array [
        "cipher-base",
        "create-hash",
        "hash-base",
        "md5.js",
        "ripemd160",
        "sha.js",
        "keccak",
        "browserify-aes",
        "create-hmac",
        "hash.js",
        "elliptic",
        "json-rpc-error",
        "glob",
        "tape",
        "concat-stream",
        "readable-stream",
        "level-iterator-stream",
        "memdown",
      ],
      "resolved": "2.0.3",
      "semver": "^2.0.1",
    },
    "invariant": Object {
      "entries": Array [],
      "parents": Array [
        "babel-traverse",
        "babel-preset-env",
      ],
      "resolved": "2.2.4",
      "semver": "^2.2.2",
    },
    "invert-kv": Object {
      "entries": Array [],
      "parents": Array [
        "lcid",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "is-arrayish": Object {
      "entries": Array [],
      "parents": Array [
        "error-ex",
      ],
      "resolved": "0.2.1",
      "semver": "^0.2.1",
    },
    "is-builtin-module": Object {
      "entries": Array [],
      "parents": Array [
        "normalize-package-data",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "is-callable": Object {
      "entries": Array [],
      "parents": Array [
        "es-to-primitive",
        "es-abstract",
      ],
      "resolved": "1.1.3",
      "semver": "^1.1.1",
    },
    "is-date-object": Object {
      "entries": Array [],
      "parents": Array [
        "es-to-primitive",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "is-finite": Object {
      "entries": Array [],
      "parents": Array [
        "repeating",
      ],
      "resolved": "1.0.2",
      "semver": "^1.0.0",
    },
    "is-fn": Object {
      "entries": Array [
        "is-fn",
      ],
      "parents": Array [
        "promise-to-callback",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "is-fullwidth-code-point": Object {
      "entries": Array [],
      "parents": Array [
        "string-width",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "is-function": Object {
      "entries": Array [
        "is-function",
      ],
      "parents": Array [
        "for-each",
        "xhr",
      ],
      "resolved": "1.0.1",
      "semver": "~1.0.0",
    },
    "is-hex-prefixed": Object {
      "entries": Array [
        "is-hex-prefixed",
      ],
      "parents": Array [
        "ethjs-util",
        "strip-hex-prefix",
      ],
      "resolved": "1.0.0",
      "semver": "1.0.0",
    },
    "is-regex": Object {
      "entries": Array [],
      "parents": Array [
        "es-abstract",
      ],
      "resolved": "1.0.4",
      "semver": "^1.0.4",
    },
    "is-symbol": Object {
      "entries": Array [],
      "parents": Array [
        "es-to-primitive",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "is-typedarray": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "1.0.0",
      "semver": "~1.0.0",
    },
    "is-utf8": Object {
      "entries": Array [],
      "parents": Array [
        "strip-bom",
      ],
      "resolved": "0.2.1",
      "semver": "^0.2.0",
    },
    "isarray": Object {
      "entries": Array [
        "isarray",
      ],
      "parents": Array [
        "readable-stream",
      ],
      "resolved": "1.0.0",
      "semver": "~1.0.0",
    },
    "isstream": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.1.2",
      "semver": "~0.1.2",
    },
    "js-tokens": Object {
      "entries": Array [],
      "parents": Array [
        "babel-code-frame",
        "loose-envify",
      ],
      "resolved": "3.0.2",
      "semver": "^3.0.2",
    },
    "jsesc": Object {
      "entries": Array [],
      "parents": Array [
        "regjsparser",
        "babel-generator",
      ],
      "resolved": "0.5.0",
      "semver": "~0.5.0",
    },
    "json-rpc-engine": Object {
      "entries": Array [
        "json-rpc-engine",
        "json-rpc-engine/src/createAsyncMiddleware",
      ],
      "parents": Array [
        "eth-block-tracker",
        "eth-json-rpc-middleware",
        "eth-json-rpc-infura",
      ],
      "resolved": "3.7.0",
      "semver": "^3.6.0",
    },
    "json-rpc-error": Object {
      "entries": Array [
        "json-rpc-error",
      ],
      "parents": Array [
        "json-rpc-engine",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
        "eth-json-rpc-infura",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "json-rpc-random-id": Object {
      "entries": Array [
        "json-rpc-random-id",
      ],
      "parents": Array [
        "eth-query",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.0",
    },
    "json-schema": Object {
      "entries": Array [],
      "parents": Array [
        "jsprim",
      ],
      "resolved": "0.2.3",
      "semver": "0.2.3",
    },
    "json-schema-traverse": Object {
      "entries": Array [],
      "parents": Array [
        "ajv",
      ],
      "resolved": "0.3.1",
      "semver": "^0.3.0",
    },
    "json-stable-stringify": Object {
      "entries": Array [
        "json-stable-stringify",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "json-stringify-safe": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "5.0.1",
      "semver": "~5.0.1",
    },
    "json5": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "0.5.1",
      "semver": "^0.5.1",
    },
    "jsonfile": Object {
      "entries": Array [],
      "parents": Array [
        "fs-extra",
      ],
      "resolved": "2.4.0",
      "semver": "^2.1.0",
    },
    "jsonify": Object {
      "entries": Array [
        "jsonify",
      ],
      "parents": Array [
        "json-stable-stringify",
      ],
      "resolved": "0.0.0",
      "semver": "~0.0.0",
    },
    "jsprim": Object {
      "entries": Array [],
      "parents": Array [
        "http-signature",
      ],
      "resolved": "1.4.1",
      "semver": "^1.2.2",
    },
    "keccak": Object {
      "entries": Array [
        "keccak",
      ],
      "parents": Array [
        "ethereumjs-util",
      ],
      "resolved": "1.4.0",
      "semver": "^1.0.2",
    },
    "klaw": Object {
      "entries": Array [],
      "parents": Array [
        "fs-extra",
      ],
      "resolved": "1.3.1",
      "semver": "^1.0.0",
    },
    "lcid": Object {
      "entries": Array [],
      "parents": Array [
        "os-locale",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "level-codec": Object {
      "entries": Array [
        "level-codec",
      ],
      "parents": Array [
        "levelup",
      ],
      "resolved": "7.0.1",
      "semver": "~7.0.0",
    },
    "level-errors": Object {
      "entries": Array [
        "level-errors",
      ],
      "parents": Array [
        "levelup",
        "level-iterator-stream",
      ],
      "resolved": "1.0.5",
      "semver": "~1.0.3",
    },
    "level-iterator-stream": Object {
      "entries": Array [
        "level-iterator-stream",
      ],
      "parents": Array [
        "levelup",
      ],
      "resolved": "1.3.1",
      "semver": "~1.3.0",
    },
    "level-ws": Object {
      "entries": Array [
        "level-ws",
      ],
      "parents": Array [
        "merkle-patricia-tree",
      ],
      "resolved": "0.0.0",
      "semver": "0.0.0",
    },
    "levelup": Object {
      "entries": Array [
        "levelup",
      ],
      "parents": Array [
        "merkle-patricia-tree",
      ],
      "resolved": "1.3.9",
      "semver": "^1.2.1",
    },
    "load-json-file": Object {
      "entries": Array [],
      "parents": Array [
        "read-pkg",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.0",
    },
    "lodash": Object {
      "entries": Array [
        "lodash/constant",
        "lodash/isArray",
        "lodash/isArrayLike",
        "lodash/isObject",
        "lodash/keys",
        "lodash/noop",
      ],
      "parents": Array [
        "async",
        "babel-types",
        "babel-traverse",
        "babel-template",
        "babel-plugin-transform-es2015-block-scoping",
        "babel-helper-define-map",
        "babel-helper-regex",
        "babel-generator",
        "babel-register",
        "babel-core",
      ],
      "resolved": "4.17.10",
      "semver": "^4.14.0",
    },
    "lodash.assign": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
        "yargs-parser",
      ],
      "resolved": "4.2.0",
      "semver": "^4.0.3",
    },
    "loose-envify": Object {
      "entries": Array [],
      "parents": Array [
        "invariant",
      ],
      "resolved": "1.3.1",
      "semver": "^1.0.0",
    },
    "ltgt": Object {
      "entries": Array [
        "ltgt",
      ],
      "parents": Array [
        "memdown",
      ],
      "resolved": "2.2.1",
      "semver": "~2.2.0",
    },
    "md5.js": Object {
      "entries": Array [
        "md5.js",
      ],
      "parents": Array [
        "create-hash",
        "evp_bytestokey",
      ],
      "resolved": "1.3.4",
      "semver": "^1.3.4",
    },
    "memdown": Object {
      "entries": Array [
        "memdown",
      ],
      "parents": Array [
        "merkle-patricia-tree",
      ],
      "resolved": "1.4.1",
      "semver": "^1.0.0",
    },
    "memorystream": Object {
      "entries": Array [
        "memorystream",
      ],
      "parents": Array [
        "solc",
      ],
      "resolved": "0.3.1",
      "semver": "^0.3.1",
    },
    "merkle-patricia-tree": Object {
      "entries": Array [
        "merkle-patricia-tree",
        "merkle-patricia-tree/secure.js",
      ],
      "parents": Array [
        "ethereumjs-block",
        "ethereumjs-vm",
      ],
      "resolved": "2.3.1",
      "semver": "^2.1.2",
    },
    "mime-db": Object {
      "entries": Array [],
      "parents": Array [
        "mime-types",
      ],
      "resolved": "1.33.0",
      "semver": "~1.33.0",
    },
    "mime-types": Object {
      "entries": Array [],
      "parents": Array [
        "form-data",
        "request",
      ],
      "resolved": "2.1.18",
      "semver": "^2.1.12",
    },
    "min-document": Object {
      "entries": Array [],
      "parents": Array [
        "global",
      ],
      "resolved": "2.19.0",
      "semver": "^2.19.0",
    },
    "minimalistic-assert": Object {
      "entries": Array [
        "minimalistic-assert",
      ],
      "parents": Array [
        "hash.js",
        "hmac-drbg",
        "elliptic",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.0",
    },
    "minimalistic-crypto-utils": Object {
      "entries": Array [
        "minimalistic-crypto-utils",
      ],
      "parents": Array [
        "hmac-drbg",
        "elliptic",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "minimatch": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
        "glob",
      ],
      "resolved": "3.0.4",
      "semver": "^3.0.4",
    },
    "minimist": Object {
      "entries": Array [],
      "parents": Array [
        "mkdirp",
        "tape",
      ],
      "resolved": "0.0.8",
      "semver": "0.0.8",
    },
    "mkdirp": Object {
      "entries": Array [],
      "parents": Array [
        "babel-register",
      ],
      "resolved": "0.5.1",
      "semver": "^0.5.1",
    },
    "ms": Object {
      "entries": Array [],
      "parents": Array [
        "debug",
      ],
      "resolved": "2.0.0",
      "semver": "2.0.0",
    },
    "nan": Object {
      "entries": Array [],
      "parents": Array [
        "keccak",
        "secp256k1",
      ],
      "resolved": "2.10.0",
      "semver": "^2.2.1",
    },
    "node-fetch": Object {
      "entries": Array [],
      "parents": Array [
        "cross-fetch",
        "fetch-ponyfill",
      ],
      "resolved": "2.1.2",
      "semver": "2.1.2",
    },
    "normalize-package-data": Object {
      "entries": Array [],
      "parents": Array [
        "read-pkg",
      ],
      "resolved": "2.4.0",
      "semver": "^2.3.2",
    },
    "number-is-nan": Object {
      "entries": Array [],
      "parents": Array [
        "is-finite",
        "is-fullwidth-code-point",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.0",
    },
    "oauth-sign": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.8.2",
      "semver": "~0.8.2",
    },
    "object-assign": Object {
      "entries": Array [],
      "parents": Array [
        "babelify",
      ],
      "resolved": "4.1.1",
      "semver": "^4.0.0",
    },
    "object-inspect": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "1.5.0",
      "semver": "~1.5.0",
    },
    "object-keys": Object {
      "entries": Array [
        "object-keys",
      ],
      "parents": Array [
        "define-properties",
      ],
      "resolved": "1.0.11",
      "semver": "^1.0.8",
    },
    "once": Object {
      "entries": Array [],
      "parents": Array [
        "inflight",
        "glob",
        "end-of-stream",
      ],
      "resolved": "1.4.0",
      "semver": "^1.3.0",
    },
    "os-homedir": Object {
      "entries": Array [],
      "parents": Array [
        "home-or-tmp",
      ],
      "resolved": "1.0.2",
      "semver": "^1.0.0",
    },
    "os-locale": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.4.0",
      "semver": "^1.4.0",
    },
    "os-tmpdir": Object {
      "entries": Array [],
      "parents": Array [
        "home-or-tmp",
      ],
      "resolved": "1.0.2",
      "semver": "^1.0.1",
    },
    "parse-headers": Object {
      "entries": Array [
        "parse-headers",
      ],
      "parents": Array [
        "xhr",
      ],
      "resolved": "2.0.1",
      "semver": "^2.0.0",
    },
    "parse-json": Object {
      "entries": Array [],
      "parents": Array [
        "load-json-file",
      ],
      "resolved": "2.2.0",
      "semver": "^2.2.0",
    },
    "path-exists": Object {
      "entries": Array [],
      "parents": Array [
        "find-up",
      ],
      "resolved": "2.1.0",
      "semver": "^2.0.0",
    },
    "path-is-absolute": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
        "glob",
        "fs-extra",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "path-parse": Object {
      "entries": Array [],
      "parents": Array [
        "resolve",
      ],
      "resolved": "1.0.5",
      "semver": "^1.0.5",
    },
    "path-type": Object {
      "entries": Array [],
      "parents": Array [
        "read-pkg",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.0",
    },
    "performance-now": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "2.1.0",
      "semver": "^2.1.0",
    },
    "pify": Object {
      "entries": Array [
        "pify",
      ],
      "parents": Array [
        "eth-block-tracker",
        "load-json-file",
        "path-type",
        "eth-json-rpc-middleware",
      ],
      "resolved": "2.3.0",
      "semver": "^2.3.0",
    },
    "pinkie": Object {
      "entries": Array [],
      "parents": Array [
        "pinkie-promise",
      ],
      "resolved": "2.0.4",
      "semver": "^2.0.0",
    },
    "pinkie-promise": Object {
      "entries": Array [],
      "parents": Array [
        "path-exists",
        "find-up",
        "load-json-file",
        "path-type",
      ],
      "resolved": "2.0.1",
      "semver": "^2.0.0",
    },
    "precond": Object {
      "entries": Array [
        "precond",
      ],
      "parents": Array [
        "backoff",
      ],
      "resolved": "0.2.3",
      "semver": "0.2",
    },
    "private": Object {
      "entries": Array [],
      "parents": Array [
        "regenerator-transform",
        "babel-core",
      ],
      "resolved": "0.1.8",
      "semver": "^0.1.6",
    },
    "process": Object {
      "entries": Array [],
      "parents": Array [
        "global",
      ],
      "resolved": "0.5.2",
      "semver": "~0.5.1",
    },
    "process-nextick-args": Object {
      "entries": Array [
        "process-nextick-args",
      ],
      "parents": Array [
        "readable-stream",
      ],
      "resolved": "2.0.0",
      "semver": "~2.0.0",
    },
    "promise-to-callback": Object {
      "entries": Array [
        "promise-to-callback",
      ],
      "parents": Array [
        "json-rpc-engine",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "prr": Object {
      "entries": Array [
        "prr",
      ],
      "parents": Array [
        "errno",
        "levelup",
      ],
      "resolved": "1.0.1",
      "semver": "~1.0.1",
    },
    "punycode": Object {
      "entries": Array [],
      "parents": Array [
        "tough-cookie",
      ],
      "resolved": "1.4.1",
      "semver": "^1.4.1",
    },
    "qs": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "6.5.2",
      "semver": "~6.5.1",
    },
    "read-pkg": Object {
      "entries": Array [],
      "parents": Array [
        "read-pkg-up",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.0",
    },
    "read-pkg-up": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "readable-stream": Object {
      "entries": Array [
        "readable-stream",
        "readable-stream/duplex.js",
        "readable-stream/passthrough.js",
        "readable-stream/readable.js",
        "readable-stream/transform.js",
        "readable-stream/writable.js",
      ],
      "parents": Array [
        "concat-stream",
        "level-ws",
        "level-iterator-stream",
        "merkle-patricia-tree",
        "through2",
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "2.3.6",
      "semver": "^2.2.2",
    },
    "regenerate": Object {
      "entries": Array [],
      "parents": Array [
        "regexpu-core",
      ],
      "resolved": "1.4.0",
      "semver": "^1.2.1",
    },
    "regenerator-runtime": Object {
      "entries": Array [],
      "parents": Array [
        "babel-runtime",
      ],
      "resolved": "0.11.1",
      "semver": "^0.11.0",
    },
    "regenerator-transform": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-regenerator",
      ],
      "resolved": "0.10.1",
      "semver": "^0.10.0",
    },
    "regexpu-core": Object {
      "entries": Array [],
      "parents": Array [
        "babel-plugin-transform-es2015-unicode-regex",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "regjsgen": Object {
      "entries": Array [],
      "parents": Array [
        "regexpu-core",
      ],
      "resolved": "0.2.0",
      "semver": "^0.2.0",
    },
    "regjsparser": Object {
      "entries": Array [],
      "parents": Array [
        "regexpu-core",
      ],
      "resolved": "0.1.5",
      "semver": "^0.1.4",
    },
    "repeating": Object {
      "entries": Array [],
      "parents": Array [
        "detect-indent",
      ],
      "resolved": "2.0.1",
      "semver": "^2.0.0",
    },
    "request": Object {
      "entries": Array [
        "request",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "2.86.0",
      "semver": "^2.67.0",
    },
    "require-directory": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "2.1.1",
      "semver": "^2.1.1",
    },
    "require-from-string": Object {
      "entries": Array [
        "require-from-string",
      ],
      "parents": Array [
        "solc",
      ],
      "resolved": "1.2.1",
      "semver": "^1.1.0",
    },
    "require-main-filename": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "resolve": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "1.5.0",
      "semver": "~1.5.0",
    },
    "resumer": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "0.0.0",
      "semver": "~0.0.0",
    },
    "rimraf": Object {
      "entries": Array [],
      "parents": Array [
        "fs-extra",
      ],
      "resolved": "2.6.2",
      "semver": "^2.2.8",
    },
    "ripemd160": Object {
      "entries": Array [
        "ripemd160",
      ],
      "parents": Array [
        "create-hash",
        "create-hmac",
      ],
      "resolved": "2.0.2",
      "semver": "^2.0.1",
    },
    "rlp": Object {
      "entries": Array [
        "rlp",
      ],
      "parents": Array [
        "ethereumjs-util",
        "merkle-patricia-tree",
        "ethereumjs-account",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "rustbn.js": Object {
      "entries": Array [
        "rustbn.js",
      ],
      "parents": Array [
        "ethereumjs-vm",
      ],
      "resolved": "0.1.2",
      "semver": "~0.1.1",
    },
    "safe-buffer": Object {
      "entries": Array [
        "safe-buffer",
      ],
      "parents": Array [
        "cipher-base",
        "hash-base",
        "sha.js",
        "keccak",
        "ethereumjs-util",
        "bip66",
        "evp_bytestokey",
        "browserify-aes",
        "create-hmac",
        "secp256k1",
        "readable-stream",
        "string_decoder",
        "memdown",
        "ethereumjs-account",
        "ethereumjs-vm",
        "request",
        "tunnel-agent",
      ],
      "resolved": "5.1.2",
      "semver": "^5.0.1",
    },
    "secp256k1": Object {
      "entries": Array [
        "secp256k1",
      ],
      "parents": Array [
        "ethereumjs-util",
      ],
      "resolved": "3.5.0",
      "semver": "^3.0.1",
    },
    "semaphore": Object {
      "entries": Array [
        "semaphore",
      ],
      "parents": Array [
        "merkle-patricia-tree",
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "1.1.0",
      "semver": ">=1.0.1",
    },
    "semver": Object {
      "entries": Array [],
      "parents": Array [
        "babel-preset-env",
        "levelup",
        "solc",
        "normalize-package-data",
      ],
      "resolved": "5.5.0",
      "semver": "^5.3.0",
    },
    "set-blocking": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "set-immediate-shim": Object {
      "entries": Array [
        "set-immediate-shim",
      ],
      "parents": Array [
        "promise-to-callback",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "sha.js": Object {
      "entries": Array [
        "sha.js",
      ],
      "parents": Array [
        "create-hash",
        "create-hmac",
      ],
      "resolved": "2.4.11",
      "semver": "^2.4.0",
    },
    "slash": Object {
      "entries": Array [],
      "parents": Array [
        "babel-core",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "sntp": Object {
      "entries": Array [],
      "parents": Array [
        "hawk",
      ],
      "resolved": "2.1.0",
      "semver": "2.x.x",
    },
    "solc": Object {
      "entries": Array [
        "solc",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "0.4.24",
      "semver": "^0.4.2",
    },
    "source-map": Object {
      "entries": Array [],
      "parents": Array [
        "babel-generator",
        "source-map-support",
        "babel-core",
      ],
      "resolved": "0.5.7",
      "semver": "^0.5.7",
    },
    "source-map-support": Object {
      "entries": Array [],
      "parents": Array [
        "babel-register",
      ],
      "resolved": "0.4.18",
      "semver": "^0.4.15",
    },
    "spdx-correct": Object {
      "entries": Array [],
      "parents": Array [
        "validate-npm-package-license",
      ],
      "resolved": "3.0.0",
      "semver": "^3.0.0",
    },
    "spdx-exceptions": Object {
      "entries": Array [],
      "parents": Array [
        "spdx-expression-parse",
      ],
      "resolved": "2.1.0",
      "semver": "^2.1.0",
    },
    "spdx-expression-parse": Object {
      "entries": Array [],
      "parents": Array [
        "spdx-correct",
        "validate-npm-package-license",
      ],
      "resolved": "3.0.0",
      "semver": "^3.0.0",
    },
    "spdx-license-ids": Object {
      "entries": Array [],
      "parents": Array [
        "spdx-expression-parse",
        "spdx-correct",
      ],
      "resolved": "3.0.0",
      "semver": "^3.0.0",
    },
    "sshpk": Object {
      "entries": Array [],
      "parents": Array [
        "http-signature",
      ],
      "resolved": "1.14.1",
      "semver": "^1.7.0",
    },
    "string-width": Object {
      "entries": Array [],
      "parents": Array [
        "cliui",
        "wrap-ansi",
        "yargs",
      ],
      "resolved": "1.0.2",
      "semver": "^1.0.1",
    },
    "string.prototype.trim": Object {
      "entries": Array [],
      "parents": Array [
        "tape",
      ],
      "resolved": "1.1.2",
      "semver": "~1.1.2",
    },
    "string_decoder": Object {
      "entries": Array [
        "string_decoder",
        "string_decoder/",
      ],
      "parents": Array [
        "readable-stream",
      ],
      "resolved": "1.1.1",
      "semver": "~1.1.1",
    },
    "strip-ansi": Object {
      "entries": Array [],
      "parents": Array [
        "chalk",
        "string-width",
        "cliui",
        "wrap-ansi",
      ],
      "resolved": "3.0.1",
      "semver": "^3.0.0",
    },
    "strip-bom": Object {
      "entries": Array [],
      "parents": Array [
        "load-json-file",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "strip-hex-prefix": Object {
      "entries": Array [
        "strip-hex-prefix",
      ],
      "parents": Array [
        "ethjs-util",
      ],
      "resolved": "1.0.0",
      "semver": "1.0.0",
    },
    "supports-color": Object {
      "entries": Array [],
      "parents": Array [
        "chalk",
      ],
      "resolved": "2.0.0",
      "semver": "^2.0.0",
    },
    "tape": Object {
      "entries": Array [],
      "parents": Array [
        "eth-block-tracker",
        "web3-provider-engine/13.8.0",
        "eth-json-rpc-middleware",
        "eth-json-rpc-infura",
      ],
      "resolved": "4.9.0",
      "semver": "^4.6.3",
    },
    "through": Object {
      "entries": Array [],
      "parents": Array [
        "resumer",
        "tape",
      ],
      "resolved": "2.3.8",
      "semver": "~2.3.4",
    },
    "through2": Object {
      "entries": Array [],
      "parents": Array [
        "eth-tx-summary",
      ],
      "resolved": "2.0.3",
      "semver": "^2.0.3",
    },
    "to-fast-properties": Object {
      "entries": Array [],
      "parents": Array [
        "babel-types",
      ],
      "resolved": "1.0.3",
      "semver": "^1.0.3",
    },
    "tough-cookie": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "2.3.4",
      "semver": "~2.3.3",
    },
    "treeify": Object {
      "entries": Array [],
      "parents": Array [
        "eth-tx-summary",
      ],
      "resolved": "1.1.0",
      "semver": "^1.0.1",
    },
    "trim": Object {
      "entries": Array [
        "trim",
      ],
      "parents": Array [
        "parse-headers",
      ],
      "resolved": "0.0.1",
      "semver": "0.0.1",
    },
    "trim-right": Object {
      "entries": Array [],
      "parents": Array [
        "babel-generator",
      ],
      "resolved": "1.0.1",
      "semver": "^1.0.1",
    },
    "tunnel-agent": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "0.6.0",
      "semver": "^0.6.0",
    },
    "typedarray": Object {
      "entries": Array [],
      "parents": Array [
        "concat-stream",
      ],
      "resolved": "0.0.6",
      "semver": "^0.0.6",
    },
    "utf8": Object {
      "entries": Array [
        "utf8",
      ],
      "parents": Array [
        "web3",
      ],
      "resolved": "2.1.2",
      "semver": "^2.1.1",
    },
    "util-deprecate": Object {
      "entries": Array [
        "util-deprecate",
      ],
      "parents": Array [
        "readable-stream",
      ],
      "resolved": "1.0.2",
      "semver": "~1.0.1",
    },
    "uuid": Object {
      "entries": Array [],
      "parents": Array [
        "request",
      ],
      "resolved": "3.2.1",
      "semver": "^3.1.0",
    },
    "validate-npm-package-license": Object {
      "entries": Array [],
      "parents": Array [
        "normalize-package-data",
      ],
      "resolved": "3.0.3",
      "semver": "^3.0.1",
    },
    "verror": Object {
      "entries": Array [],
      "parents": Array [
        "jsprim",
      ],
      "resolved": "1.10.0",
      "semver": "1.10.0",
    },
    "web3-provider-engine/13.8.0": Object {
      "entries": Array [],
      "parents": Array [
        "eth-tx-summary",
      ],
      "resolved": "13.8.0",
      "semver": "^13.3.2",
    },
    "whatwg-fetch": Object {
      "entries": Array [],
      "parents": Array [
        "cross-fetch",
      ],
      "resolved": "2.0.4",
      "semver": "2.0.4",
    },
    "which-module": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "1.0.0",
      "semver": "^1.0.0",
    },
    "window-size": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "0.2.0",
      "semver": "^0.2.0",
    },
    "wrap-ansi": Object {
      "entries": Array [],
      "parents": Array [
        "cliui",
      ],
      "resolved": "2.1.0",
      "semver": "^2.0.0",
    },
    "wrappy": Object {
      "entries": Array [],
      "parents": Array [
        "once",
        "inflight",
      ],
      "resolved": "1.0.2",
      "semver": "1",
    },
    "ws": Object {
      "entries": Array [
        "ws",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "5.1.1",
      "semver": "^5.1.1",
    },
    "xhr": Object {
      "entries": Array [
        "xhr",
      ],
      "parents": Array [
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "2.4.1",
      "semver": "^2.2.0",
    },
    "xhr2": Object {
      "entries": Array [
        "xhr2",
      ],
      "parents": Array [
        "web3",
      ],
      "resolved": "0.1.4",
      "semver": "*",
    },
    "xmlhttprequest": Object {
      "entries": Array [
        "xmlhttprequest",
      ],
      "parents": Array [
        "web3",
      ],
      "resolved": "1.8.0",
      "semver": "*",
    },
    "xtend": Object {
      "entries": Array [
        "xtend",
      ],
      "parents": Array [
        "eth-query",
        "level-ws",
        "abstract-leveldown",
        "level-iterator-stream",
        "levelup",
        "through2",
        "xhr",
        "web3-provider-engine/13.8.0",
      ],
      "resolved": "4.0.1",
      "semver": "^4.0.1",
    },
    "y18n": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "3.2.1",
      "semver": "^3.2.1",
    },
    "yargs": Object {
      "entries": Array [],
      "parents": Array [
        "solc",
      ],
      "resolved": "4.8.1",
      "semver": "^4.7.1",
    },
    "yargs-parser": Object {
      "entries": Array [],
      "parents": Array [
        "yargs",
      ],
      "resolved": "2.4.1",
      "semver": "^2.4.1",
    },
  },
}
`;
